--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 2,
 
-  "name": "Link Previewer",
-  "description": "Provides previews to external links, images, and videos in articles",
+  "name": "Lazy Linker",
+  "description": "Provides previews to external links, images, and videos in articles when a link is hover over.",
 
-  "version": "0.0.2",
+  "version": "0.1.0",
 
   "permissions": [
     "*://*/*",
